ec2-instance.tf
#Creating a VPC
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  #enable_nat_gateway = "true"
  #enable_vpn_gateway = "true"

  tags = {
    Name = "main"
  }
}
#Creating a public subet-1
resource "aws_subnet" "main-1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1a"

  tags = {
    Name = "pub_subnet-my-vpc-1"
  }
}
#Creating a public subet-2
resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "us-east-1b"

  tags = {
    Name = "pub_subnet-my-vpc-2"
  }
}
#Creating internet gateway 
resource "aws_internet_gateway" "main-igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "main"
  }
}
#creating route table for internet gateway
resource "aws_route_table" "main-public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "aws_internet_gateway.main-igw.id"
  }
  tags = {
    Name = "main-public-1"
  }
}
#creating route association public subnet
resource "aws_route_table_association" "main-public-1-a" {
  subnet_id      = "aws_subnet.pub_subnet-my-vpc-1.id"
  route_table_id = "aws_route_table.main-public-1.id"
}

resource "aws_route_table_association" "main-public-2-a" {
  subnet_id      = "aws_subnet.pub_subnet-my-vpc-2.id"
  route_table_id = "aws_route_table.main-public-1.id"
}

resource "aws_instance" "demo" {
  ami           = "ami-053b0d53c279acc90"
  instance_type = "t2.micro"
  subnet_id     = "(aws_subnet.pub_subnet-my-vpc-1.id)"
  key_name      = "VPC-Demo"

  tags = {
    "Name"       = "demo-iNC"
    "Enviroment" = "Production"
  }
  user_data = file("user-data-script.sh")
}
